[package]
authors = ["Kazzix <kazzix14@gmail.com>"]
description = "Secure key generator and management tool. Keys looks like random, but they're reproducible using just one password and nickname of keys even without this software."
edition = "2018"
license = "MPL-2.0"
name = "keybox"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keybox_core"

[[bin]]
name = "keybox"
path = "src/bin.rs"

[dependencies]
bs58 = "0.4.0"
dirs = "3.0.1"
sha3 = "0.9.1"
structopt = "0.3.21"
toml = "0.5.8"
# newer than this cause error
dialoguer = "0.6.2"
